# nao-object-gesture

./: CMakeLists.txt  Doxyfile  README.md  makefornao.sh
doc/html/: DisplayWindow_8cpp.html  DisplayWindow_8hpp.html  DisplayWindow_8hpp_source.html  GestureRecognition_8cpp.html  GestureRecognition_8hpp.html  GestureRecognition_8hpp_source.html  ImageAcquisition_8cpp.html  ImageAcquisition_8h.html  ImageAcquisition_8h_source.html  ImgProcPipeline_8cpp.html  ImgProcPipeline_8hpp.html  ImgProcPipeline_8hpp_source.html  NAOObjectGesture_8cpp.html  NAOObjectGesture_8h.html  NAOObjectGesture_8h_source.html  ObjectTracking_8cpp.html  ObjectTracking_8hpp.html  ObjectTracking_8hpp_source.html  annotated.html  classBGSubtractor.html  classBayesColorHistBackProject.html  classColorHistBackProject.html  classConnectedCamera.html  classDisplayWindow.html  classGMMColorHistBackProject.html  classGaussianMixtureModel.html  classGesture.html  classHistogram.html  classImageAcquisition.html  classImgSequence.html  classLTIFilter.html  classNAOCamera.html  classNAOEvent.html  classNAOObjectGesture.html  classObjectTracker.html  classOpticalFlow.html  classProcessingElement.html  classSimpleBlobDetect.html  classSimpleThresholder.html  classTrackedObject.html  (+38 more)
doc/html/search/: all_5f.js  all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_66.js  all_67.js  all_68.js  all_69.js  all_6c.js  all_6d.js  all_6e.js  all_6f.js  all_70.js  all_72.js  all_73.js  all_74.js  all_75.js  all_76.js  classes_62.js  classes_63.js  classes_67.js  classes_69.js  classes_6c.js  classes_6e.js  classes_6f.js  classes_70.js  classes_73.js  classes_74.js  classes_75.js  defines_61.js  defines_63.js  defines_70.js  defines_72.js  files_64.js  files_67.js  files_69.js  files_6d.js  files_6e.js  (+40 more)
doc/latex/: DisplayWindow_8cpp.tex  DisplayWindow_8hpp.tex  GestureRecognition_8cpp.tex  GestureRecognition_8hpp.tex  ImageAcquisition_8cpp.tex  ImageAcquisition_8h.tex  ImgProcPipeline_8cpp.tex  ImgProcPipeline_8hpp.tex  NAOObjectGesture_8cpp.tex  NAOObjectGesture_8h.tex  ObjectTracking_8cpp.tex  ObjectTracking_8hpp.tex  annotated.tex  classBGSubtractor.eps  classBGSubtractor.tex  classBayesColorHistBackProject.eps  classBayesColorHistBackProject.tex  classColorHistBackProject.eps  classColorHistBackProject.tex  classConnectedCamera.eps  classConnectedCamera.tex  classDisplayWindow.tex  classGMMColorHistBackProject.eps  classGMMColorHistBackProject.tex  classGaussianMixtureModel.tex  classGesture.tex  classHistogram.eps  classHistogram.tex  classImageAcquisition.eps  classImageAcquisition.tex  classImgSequence.eps  classImgSequence.tex  classLTIFilter.tex  classNAOCamera.eps  classNAOCamera.tex  classNAOEvent.tex  classNAOObjectGesture.tex  classObjectTracker.eps  classObjectTracker.tex  classOpticalFlow.eps  (+21 more)
examples/: config.ini  moduleConnectExample.py
include/: ColorSegmenter.hpp  DisplayWindow.hpp  GestureRecognition.hpp  ImageAcquisition.h  ImgProcPipeline.hpp  NAOObjectGesture.h  ObjectTracking.hpp
src/: CMakeLists.txt  ColorSegmenter.cpp  DisplayWindow.cpp  GestureRecognition.cpp  ImageAcquisition.cpp  ImgProcPipeline.cpp  NAOObjectGesture.cpp  ObjectTracking.cpp  main.cpp  main_remoteNAO.cpp  naoqi_module_loader.cpp
